--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
-  text-align: center;
+.navbar{
+  background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.navbar a{
   color: white;
+  font-size: 2rem;
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar a:hover{
+  background-color: grey;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.group {
+  width: 30%;
+  display: inline-block;
+}
+
+.btn{
+  width: 20%;
+  padding: 1%;
+  border-width: 1px;
+  background-color: pink;
+  color: white;
 }
